overlapping cell style fix

--- a/themes/react-data-grid.less
+++ b/themes/react-data-grid.less
@@ -446,6 +446,7 @@ textareaselect.editor-main {
 .react-grid-Cell--locked:last-of-type {
   border-right: 1px solid #dddddd;
   box-shadow: none;
+  z-index:99;
 }
 
 .react-grid-image {
